commit translated contents

--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.chartparentlabelstrategy.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.chartparentlabelstrategy.yml
@@ -1,38 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartParentLabelStrategy:enum'
-    summary: |-
-      表示图表系列布局的父标签策略。 这仅适用于树状图图表
+### YamlMime:TSEnum
+name: Excel.ChartParentLabelStrategy
+uid: excel!Excel.ChartParentLabelStrategy:enum
+package: excel!
+fullName: Excel.ChartParentLabelStrategy
+summary: >-
+  表示图表系列布局的父标签策略。 这仅适用于树状图图表
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartParentLabelStrategy
-    fullName: Excel.ChartParentLabelStrategy
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartParentLabelStrategy.banner:member'
-      - 'excel!Excel.ChartParentLabelStrategy.none:member'
-      - 'excel!Excel.ChartParentLabelStrategy.overlapping:member'
-  - uid: 'excel!Excel.ChartParentLabelStrategy.banner:member'
-    name: banner
-    fullName: banner
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Banner"'
-  - uid: 'excel!Excel.ChartParentLabelStrategy.none:member'
-    name: none
-    fullName: none
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"None"'
-  - uid: 'excel!Excel.ChartParentLabelStrategy.overlapping:member'
-    name: overlapping
-    fullName: overlapping
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Overlapping"'
+
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: banner
+  uid: excel!Excel.ChartParentLabelStrategy.banner:member
+  package: excel!
+  summary: ''
+- name: none
+  uid: excel!Excel.ChartParentLabelStrategy.none:member
+  package: excel!
+  summary: ''
+- name: overlapping
+  uid: excel!Excel.ChartParentLabelStrategy.overlapping:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 50f358c70fdccd055bf01eaa1159195d694104dd
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49346278"
