--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartpointupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartpointupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
-    summary: '一个用于更新 ChartPoint 对象上的数据的接口，可用于`chartPoint.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartPointUpdateData
-    fullName: Excel.Interfaces.ChartPointUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
-    summary: |-
-      封装图表点的格式属性。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPointUpdateData
+uid: excel!Excel.Interfaces.ChartPointUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPointUpdateData
+summary: 一个用于更新 ChartPoint 对象上的数据的接口，可用于 `chartPoint.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: format
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    封装图表点的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-    name: Excel.Interfaces.ChartPointFormatUpdateData
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartPointFormatUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: 48a7a0c306eb4c594c71c0836093a310f39c76c6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49345557"
