--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.chartmapprojectiontype.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.chartmapprojectiontype.yml
@@ -1,54 +1,41 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartMapProjectionType:enum'
-    summary: |-
-      表示图表系列布局的区域投影类型。 这仅适用于地区地图图表。
+### YamlMime:TSEnum
+name: Excel.ChartMapProjectionType
+uid: excel!Excel.ChartMapProjectionType:enum
+package: excel!
+fullName: Excel.ChartMapProjectionType
+summary: >-
+  表示图表系列布局的区域投影类型。 这仅适用于地区地图图表。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartMapProjectionType
-    fullName: Excel.ChartMapProjectionType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartMapProjectionType.albers:member'
-      - 'excel!Excel.ChartMapProjectionType.automatic:member'
-      - 'excel!Excel.ChartMapProjectionType.mercator:member'
-      - 'excel!Excel.ChartMapProjectionType.miller:member'
-      - 'excel!Excel.ChartMapProjectionType.robinson:member'
-  - uid: 'excel!Excel.ChartMapProjectionType.albers:member'
-    name: albers
-    fullName: albers
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Albers"'
-  - uid: 'excel!Excel.ChartMapProjectionType.automatic:member'
-    name: automatic
-    fullName: automatic
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Automatic"'
-  - uid: 'excel!Excel.ChartMapProjectionType.mercator:member'
-    name: mercator
-    fullName: mercator
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Mercator"'
-  - uid: 'excel!Excel.ChartMapProjectionType.miller:member'
-    name: miller
-    fullName: miller
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Miller"'
-  - uid: 'excel!Excel.ChartMapProjectionType.robinson:member'
-    name: robinson
-    fullName: robinson
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Robinson"'
+
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: albers
+  uid: excel!Excel.ChartMapProjectionType.albers:member
+  package: excel!
+  summary: ''
+- name: automatic
+  uid: excel!Excel.ChartMapProjectionType.automatic:member
+  package: excel!
+  summary: ''
+- name: mercator
+  uid: excel!Excel.ChartMapProjectionType.mercator:member
+  package: excel!
+  summary: ''
+- name: miller
+  uid: excel!Excel.ChartMapProjectionType.miller:member
+  package: excel!
+  summary: ''
+- name: robinson
+  uid: excel!Excel.ChartMapProjectionType.robinson:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: ed50f43138db7fdd152dc6ff91c9a380b785817a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49346313"
