--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.chartaxesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.chartaxesloadoptions.yml
@@ -1,78 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
-    summary: |-
-      表示图表坐标轴。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartAxesLoadOptions
+uid: excel!Excel.Interfaces.ChartAxesLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartAxesLoadOptions
+summary: >-
+  表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartAxesLoadOptions
-    fullName: Excel.Interfaces.ChartAxesLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartAxesLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartAxesLoadOptions#categoryAxis:member'
-      - 'excel!Excel.Interfaces.ChartAxesLoadOptions#seriesAxis:member'
-      - 'excel!Excel.Interfaces.ChartAxesLoadOptions#valueAxis:member'
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions#categoryAxis:member'
-    summary: |-
-      表示图表中的类别轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: categoryAxis
-    fullName: categoryAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'categoryAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions#seriesAxis:member'
-    summary: |-
-      表示三维图表的系列轴。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartAxesLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: categoryAxis
+  uid: excel!Excel.Interfaces.ChartAxesLoadOptions#categoryAxis:member
+  package: excel!
+  fullName: categoryAxis
+  summary: >-
+    表示图表中的类别轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: seriesAxis
-    fullName: seriesAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'seriesAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions#valueAxis:member'
-    summary: |-
-      表示坐标轴中的数值轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: valueAxis
-    fullName: valueAxis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'valueAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
-    name: Excel.Interfaces.ChartAxisLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'categoryAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisLoadOptions:interface" />
+- name: seriesAxis
+  uid: excel!Excel.Interfaces.ChartAxesLoadOptions#seriesAxis:member
+  package: excel!
+  fullName: seriesAxis
+  summary: >-
+    表示三维图表的系列轴。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'seriesAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisLoadOptions:interface" />
+- name: valueAxis
+  uid: excel!Excel.Interfaces.ChartAxesLoadOptions#valueAxis:member
+  package: excel!
+  fullName: valueAxis
+  summary: >-
+    表示坐标轴中的数值轴。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'valueAxis?: Excel.Interfaces.ChartAxisLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxisLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 7e5fa0fc380308ce847af5cec6a38a6df18003b9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49346110"
