--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.specialcelltype.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.specialcelltype.yml
@@ -1,83 +1,49 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SpecialCellType:enum'
-    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.SpecialCellType
-    fullName: Excel.SpecialCellType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.SpecialCellType.blanks:member'
-      - 'excel!Excel.SpecialCellType.conditionalFormats:member'
-      - 'excel!Excel.SpecialCellType.constants:member'
-      - 'excel!Excel.SpecialCellType.dataValidations:member'
-      - 'excel!Excel.SpecialCellType.formulas:member'
-      - 'excel!Excel.SpecialCellType.sameConditionalFormat:member'
-      - 'excel!Excel.SpecialCellType.sameDataValidation:member'
-      - 'excel!Excel.SpecialCellType.visible:member'
-  - uid: 'excel!Excel.SpecialCellType.blanks:member'
-    summary: 无内容的单元格。
-    name: blanks
-    fullName: blanks
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Blanks"'
-  - uid: 'excel!Excel.SpecialCellType.conditionalFormats:member'
-    summary: 包含条件格式的所有单元格
-    name: conditionalFormats
-    fullName: conditionalFormats
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ConditionalFormats"'
-  - uid: 'excel!Excel.SpecialCellType.constants:member'
-    summary: 含有常量的单元格。
-    name: constants
-    fullName: constants
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Constants"'
-  - uid: 'excel!Excel.SpecialCellType.dataValidations:member'
-    summary: 含有验证条件的单元格。
-    name: dataValidations
-    fullName: dataValidations
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"DataValidations"'
-  - uid: 'excel!Excel.SpecialCellType.formulas:member'
-    summary: 含有公式的单元格。
-    name: formulas
-    fullName: formulas
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Formulas"'
-  - uid: 'excel!Excel.SpecialCellType.sameConditionalFormat:member'
-    summary: 与区域中的第一个单元格具有相同条件格式的单元格。
-    name: sameConditionalFormat
-    fullName: sameConditionalFormat
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"SameConditionalFormat"'
-  - uid: 'excel!Excel.SpecialCellType.sameDataValidation:member'
-    summary: 与区域中的第一个单元格具有相同的数据有效性条件的单元格。
-    name: sameDataValidation
-    fullName: sameDataValidation
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"SameDataValidation"'
-  - uid: 'excel!Excel.SpecialCellType.visible:member'
-    summary: 可见的单元格。
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Visible"'
+### YamlMime:TSEnum
+name: Excel.SpecialCellType
+uid: excel!Excel.SpecialCellType:enum
+package: excel!
+fullName: Excel.SpecialCellType
+summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: blanks
+  uid: excel!Excel.SpecialCellType.blanks:member
+  package: excel!
+  summary: 无内容的单元格。
+- name: conditionalFormats
+  uid: excel!Excel.SpecialCellType.conditionalFormats:member
+  package: excel!
+  summary: 包含条件格式的所有单元格
+- name: constants
+  uid: excel!Excel.SpecialCellType.constants:member
+  package: excel!
+  summary: 含有常量的单元格。
+- name: dataValidations
+  uid: excel!Excel.SpecialCellType.dataValidations:member
+  package: excel!
+  summary: 含有验证条件的单元格。
+- name: formulas
+  uid: excel!Excel.SpecialCellType.formulas:member
+  package: excel!
+  summary: 含有公式的单元格。
+- name: sameConditionalFormat
+  uid: excel!Excel.SpecialCellType.sameConditionalFormat:member
+  package: excel!
+  summary: 与区域中的第一个单元格具有相同条件格式的单元格。
+- name: sameDataValidation
+  uid: excel!Excel.SpecialCellType.sameDataValidation:member
+  package: excel!
+  summary: 与区域中的第一个单元格具有相同的数据有效性条件的单元格。
+- name: visible
+  uid: excel!Excel.SpecialCellType.visible:member
+  package: excel!
+  summary: 可见的单元格。
+metadata:
+  ms.openlocfilehash: f8c0dae19272dffb4e8074864e5a8ef623b80570
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49345991"
