--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartcollectionloadoptions.yml
@@ -1,234 +1,226 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
-    summary: |-
-      工作表中的所有 chart 对象的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartCollectionLoadOptions
+uid: excel!Excel.Interfaces.ChartCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartCollectionLoadOptions
+summary: >-
+  工作表中的所有 chart 对象的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartCollectionLoadOptions
-    fullName: Excel.Interfaces.ChartCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#axes:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#dataLabels:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#left:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#legend:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#series:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
-      - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#axes:member'
-    summary: |-
-      对于集合中的每一项：表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: axes
-    fullName: axes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'axes?: Excel.Interfaces.ChartAxesLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#dataLabels:member'
-    summary: |-
-      对于集合中的每一项：代表图表上的 datalabels。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: axes
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#axes:member
+  package: excel!
+  fullName: axes
+  summary: >-
+    对于集合中的每一项：表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dataLabels
-    fullName: dataLabels
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#format:member'
-    summary: |-
-      对于集合中的每一项：封装图表区域的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartAreaFormatLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member'
-    summary: |-
-      对于集合中的每一项：指定 chart 对象的高度（以磅为单位）。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'axes?: Excel.Interfaces.ChartAxesLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxesLoadOptions:interface" />
+- name: dataLabels
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#dataLabels:member
+  package: excel!
+  fullName: dataLabels
+  summary: >-
+    对于集合中的每一项：代表图表上的 datalabels。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#left:member'
-    summary: |-
-      对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#legend:member'
-    summary: |-
-      对于集合中的每一项：代表图表的图例。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface" />
+- name: format
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    对于集合中的每一项：封装图表区域的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: legend
-    fullName: legend
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'legend?: Excel.Interfaces.ChartLegendLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项：指定 chart 对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#series:member'
-    summary: |-
-      对于集合中的每一项：代表图表中的单个系列或系列集合。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartAreaFormatLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    对于集合中的每一项：指定 chart 对象的高度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: series
-    fullName: series
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'series?: Excel.Interfaces.ChartSeriesCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member'
-    summary: |-
-      对于集合中的每一项：指定指定图表的标题，包括标题的文本、可见性、位置和格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: title
-    fullName: title
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'title?: Excel.Interfaces.ChartTitleLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member'
-    summary: |-
-      对于集合中的每一项：指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: left
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
-    summary: |-
-      对于集合中的每一项：指定 chart 对象的宽度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
-    summary: |-
-      对于集合中的每一项：包含当前图表的工作表。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: boolean;'
+    return:
+      type: boolean
+- name: legend
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#legend:member
+  package: excel!
+  fullName: legend
+  summary: >-
+    对于集合中的每一项：代表图表的图例。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheet
-    fullName: worksheet
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
-    name: Excel.Interfaces.ChartAxesLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
-    name: Excel.Interfaces.ChartDataLabelsLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartAreaFormatLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
-    name: Excel.Interfaces.ChartLegendLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
-    name: Excel.Interfaces.ChartSeriesCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
-    name: Excel.Interfaces.ChartTitleLoadOptions
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-    name: Excel.Interfaces.WorksheetLoadOptions
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'legend?: Excel.Interfaces.ChartLegendLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendLoadOptions:interface" />
+- name: name
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项：指定 chart 对象的名称。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: series
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#series:member
+  package: excel!
+  fullName: series
+  summary: >-
+    对于集合中的每一项：代表图表中的单个系列或系列集合。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'series?: Excel.Interfaces.ChartSeriesCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface" />
+- name: title
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member
+  package: excel!
+  fullName: title
+  summary: >-
+    对于集合中的每一项：指定指定图表的标题，包括标题的文本、可见性、位置和格式。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'title?: Excel.Interfaces.ChartTitleLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTitleLoadOptions:interface" />
+- name: top
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    对于集合中的每个项目：指定一个距离，以磅为单位，从该对象的上边缘到工作表上的第1行的顶部 () 或图表) 上的图表区 (顶部。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    对于集合中的每一项：指定 chart 对象的宽度（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+- name: worksheet
+  uid: excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member
+  package: excel!
+  fullName: worksheet
+  summary: >-
+    对于集合中的每一项：包含当前图表的工作表。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.WorksheetLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 98a5f66e36c7ee41a9c6479cfb6b8ce328785f3b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49345732"
