--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangeviewupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeViewUpdateData:interface'
-    summary: '一个用于更新 RangeView 对象上的数据的接口，可用于`rangeView.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeViewUpdateData
-    fullName: Excel.Interfaces.RangeViewUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.RangeViewUpdateData
+uid: excel!Excel.Interfaces.RangeViewUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeViewUpdateData
+summary: 一个用于更新 RangeView 对象上的数据的接口，可用于 `rangeView.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: ea85544ee442889d61f4bd9bb7f1ba7d38de4d0e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49345333"
