commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.addin.yml
+++ b/docs/docs-ref-autogen/office/office/office.addin.yml
@@ -39,7 +39,7 @@ methods:
   uid: office!Office.Addin#onVisibilityModeChanged:member(1)
   package: office!
   fullName: onVisibilityModeChanged(listener)
-  summary: 为事件添加侦听器 `onVisbilityModeChanged` 。
+  summary: 为事件添加侦听器 `onVisibilityModeChanged` 。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -86,9 +86,9 @@ methods:
       type: Promise&lt;void&gt;
       description: 在显示 UI 时解决的承诺。
 metadata:
-  ms.openlocfilehash: da93ed0c12a62f12562d74c2bac5ef2e68cf1ff2
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 05d535750f27d0923865f6a3aae0938c7e7edc39
+  ms.sourcegitcommit: 50d278a47f7095ea4453a3564f739eb5ad499a76
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49143552"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "49420739"
