--- a/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
@@ -13,7 +13,7 @@ properties:
   uid: office!Office.AddinCommands.EventCompletedOptions#allowEvent:member
   package: office!
   fullName: allowEvent
-  summary: 一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时，此值指示已处理事件应继续执行或被取消。 例如，处理事件的外接程序 `ItemSend` 可以设置为 `allowEvent` `false` 取消发送邮件。
+  summary: 一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时，此值表示处理的事件应继续执行还是将其取消。 例如，处理事件的外接程序 `ItemSend` 可以设置为 `allowEvent` `false` 取消发送邮件。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -22,9 +22,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: b8650d7803d06d3760e96b3b98b53796e1c13d12
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 98f85b4e268aa23612f5bc8704b1293d0876d3d5
+  ms.sourcegitcommit: 50d278a47f7095ea4453a3564f739eb5ad499a76
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49151378"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "49420753"
