--- a/docs/docs-ref-autogen/office/office/office.ribbon.yml
+++ b/docs/docs-ref-autogen/office/office/office.ribbon.yml
@@ -3,17 +3,34 @@ name: Office.Ribbon
 uid: office!Office.Ribbon:interface
 package: office!
 fullName: Office.Ribbon
-summary: 包含为管理 OFfice 功能区的状态而提供的所有功能的接口。
+summary: 包含为管理 Office 功能区的状态而提供的所有功能的接口。
 remarks: ''
 isPreview: false
 isDeprecated: false
 type: interface
 methods:
+- name: requestCreateControls(tabDefinition)
+  uid: office!Office.Ribbon#requestCreateControls:member(1)
+  package: office!
+  fullName: requestCreateControls(tabDefinition)
+  summary: 将自定义上下文选项卡注册到 Office 并定义该选项卡的控件。 此方法仅请求注册选项卡。 实际注册由 Office 应用程序控制，并且在解析返回的对象时可能不是完整的 `Promise` 。 有关详细信息和代码示例，请参阅 [创建自定义上下文选项卡](https://docs.microsoft.com/office/dev/add-ins/design/contextual-tabs)<!-- -->.
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'requestCreateControls(tabDefinition: Object): Promise<void>;'
+    parameters:
+    - id: tabDefinition
+      description: 指定选项卡的属性和子控件及其属性。 将符合 Office 动态功能区 JSON 架构的 JSON 字符串传递给 `JSON.parse`<!-- -->，然后将返回的对象传递给此方法。
+      type: Object
+    return:
+      type: Promise&lt;void&gt;
+      description: ''
 - name: requestUpdate(input)
   uid: office!Office.Ribbon#requestUpdate:member(1)
   package: office!
   fullName: requestUpdate(input)
-  summary: 向 Office 发送更新功能区的请求。 请注意，此 API 仅请求更新。 对功能区的实际 UI 更新由 Office 应用程序控制，因此 (或 refresh) 的功能区更新的确切计时无法在此 API 完成后确定。
+  summary: 向 Office 发送更新功能区的请求。 请注意，此 API 仅请求更新。 对功能区的实际 UI 更新由 Office 应用程序控制，因此 (或 refresh) 的功能区更新的确切计时无法在此 API 完成后确定。 有关代码示例，请参阅 [启用和禁用外接程序命令](https://docs.microsoft.com/office/dev/add-ins/design/disable-add-in-commands) 和 [创建自定义上下文选项卡](https://docs.microsoft.com/office/dev/add-ins/design/contextual-tabs)<!-- -->.
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -27,9 +44,9 @@ methods:
       type: Promise&lt;void&gt;
       description: ''
 metadata:
-  ms.openlocfilehash: 5934734b74aa62422dc0cc9ba6d6c088ebe3caaa
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 716192a09a451705977e2234fef45f0269f642fe
+  ms.sourcegitcommit: 50d278a47f7095ea4453a3564f739eb5ad499a76
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49194256"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "49420725"
