--- a/docs/docs-ref-autogen/office/office/office.tab.yml
+++ b/docs/docs-ref-autogen/office/office/office.tab.yml
@@ -3,7 +3,7 @@ name: Office.Tab
 uid: office!Office.Tab:interface
 package: office!
 fullName: Office.Tab
-summary: 表示单个选项卡以及它应具有的状态。
+summary: 表示单个选项卡以及它应具有的状态。 有关代码示例，请参阅 [启用和禁用外接程序命令](https://docs.microsoft.com/office/dev/add-ins/design/disable-add-in-commands) 和 [创建自定义上下文选项卡](https://docs.microsoft.com/office/dev/add-ins/design/contextual-tabs)<!-- -->.
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -18,7 +18,7 @@ properties:
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'controls: Control[];'
+    content: 'controls?: Control[];'
     return:
       type: <xref uid="office!Office.Control:interface" />[]
 - name: id
@@ -33,10 +33,22 @@ properties:
     content: 'id: string;'
     return:
       type: string
+- name: visible
+  uid: office!Office.Tab#visible:member
+  package: office!
+  fullName: visible
+  summary: 指定选项卡在功能区上是否可见。 仅用于上下文选项卡。
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
 metadata:
-  ms.openlocfilehash: 03ec4789d2912564ce14dc7c9d6158f34fd4e9e2
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: b9ec402dc65374c05b929f799ac125364dadcad8
+  ms.sourcegitcommit: 50d278a47f7095ea4453a3564f739eb5ad499a76
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49251344"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "49420732"
