commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.datavalidationalertstyle.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.datavalidationalertstyle.yml
@@ -16,18 +16,21 @@ fields:
   uid: excel!Excel.DataValidationAlertStyle.information:member
   package: excel!
   summary: ''
+  value: "\"Information\""
 - name: stop
   uid: excel!Excel.DataValidationAlertStyle.stop:member
   package: excel!
   summary: ''
+  value: "\"Stop\""
 - name: warning
   uid: excel!Excel.DataValidationAlertStyle.warning:member
   package: excel!
   summary: ''
+  value: "\"Warning\""
 metadata:
-  ms.openlocfilehash: 6d489b03c8c87b41e91b845fe87b306033d23e41
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 1bbdab9c34edb70fe13032bfdef593f4b0b886f4
+  ms.sourcegitcommit: a6ecbc9abca2ab5c82af4c869e3e2d72c999a4c1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49271168"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "49551490"
