commit translated contents

--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.chartaxisgroup.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.chartaxisgroup.yml
@@ -12,14 +12,16 @@ fields:
   uid: excel!Excel.ChartAxisGroup.primary:member
   package: excel!
   summary: ''
+  value: "\"Primary\""
 - name: secondary
   uid: excel!Excel.ChartAxisGroup.secondary:member
   package: excel!
   summary: ''
+  value: "\"Secondary\""
 metadata:
-  ms.openlocfilehash: 95fd1758e075a9b1bdf8f9a82f950f970b43ed51
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: b8ba2c5ace3815936a7000cf7e36a9e5e7e1abcc
+  ms.sourcegitcommit: a6ecbc9abca2ab5c82af4c869e3e2d72c999a4c1
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49282216"
+  ms.lasthandoff: 12/02/2020
+  ms.locfileid: "49552224"
