commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.context.yml
+++ b/docs/docs-ref-autogen/office/office/office.context.yml
@@ -94,7 +94,11 @@ properties:
   uid: office!Office.Context#host:member
   package: office!
   fullName: host
-  summary: 包含运行外接程序的 Office 应用程序主机。
+  summary: >-
+    包含运行外接程序的 Office 应用程序主机。
+
+
+    **重要说明**：在 Outlook 中，此属性可从要求集1.5 中获取。 对于所有邮箱要求集，可以使用 `Office.context.diagnostics` 属性获取主机。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -171,7 +175,11 @@ properties:
   uid: office!Office.Context#platform:member
   package: office!
   fullName: platform
-  summary: 提供在其上运行外接的平台。
+  summary: >-
+    提供在其上运行外接的平台。
+
+
+    **重要说明**：在 Outlook 中，此属性可从要求集1.5 中获取。 对于所有邮箱要求集，可以使用 `Office.context.diagnostics` 属性获取平台。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -263,9 +271,9 @@ properties:
     return:
       type: <xref uid="office!Office.UI:interface" />
 metadata:
-  ms.openlocfilehash: 4a366d9ffedfa94f945405fcadd5152703b32ec1
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 3c3092920e92336a21793c4219ab7f20bb0983c6
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49329591"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570387"
