--- a/docs/docs-ref-autogen/word/word/word.customproperty.yml
+++ b/docs/docs-ref-autogen/word/word/word.customproperty.yml
@@ -62,7 +62,7 @@ properties:
   package: word!
   fullName: value
   summary: >-
-    获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
+    获取或设置自定义属性的值。 请注意，即使在 web 上的 Word 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
 
 
     \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -232,9 +232,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: abff5dfb4d6af744aa145266378275b376e345b8
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: ed0f5ec40cfe20385248338e1e9504588a6515c5
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49181732"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570096"
