--- a/docs/docs-ref-autogen/word/word/word.interfaces.contentcontrolcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.contentcontrolcollectionloadoptions.yml
@@ -241,6 +241,9 @@ properties:
     对于集合中的每一项：获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -378,9 +381,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 79c67708417c653ac99e72110302de382cedef04
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: eb9dd8c9d79fed084478e3bf193e799279037ec3
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49171517"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570478"
