--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontroldata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontroldata.yml
@@ -161,6 +161,9 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -266,9 +269,9 @@ properties:
     return:
       type: <xref uid="word!Word.ContentControlType:enum" /> | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"
 metadata:
-  ms.openlocfilehash: 98d894c95af6dd132fb585e65659028998b42d38
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: e1293bfdb7098f987de767d9548f354ad28a91b6
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49328170"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570310"
