--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolupdatedata.yml
@@ -97,6 +97,9 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -170,9 +173,9 @@ properties:
     return:
       type: string
 metadata:
-  ms.openlocfilehash: 925b7145f6a461923d1c619095ef23478308f501
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 22260b75fff922edbf9a941d4a6b7b6417b46679
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49263244"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570268"
