--- a/docs/docs-ref-autogen/word_1_2/word/word.contentcontrol.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.contentcontrol.yml
@@ -193,6 +193,9 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -342,7 +345,7 @@ methods:
   package: word!
   fullName: getHtml()
   summary: >-
-    获取内容控件对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台上的同一文档返回完全相同的 HTML (Windows、Mac、web 上的 Word 等 ) 。 如果您需要完全保真度或跨平台的一致性，请使用 `ContentControl.getOoxml()` 并将返回的 XML 转换为 HTML。
+    获取内容控件对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台上的同一文档返回完全相同的 HTML (Windows、Mac、Word 网页版，等等 ) 。 如果您需要完全保真度或跨平台的一致性，请使用 `ContentControl.getOoxml()` 并将返回的 XML 转换为 HTML。
 
 
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -976,9 +979,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: b4c314015bc55849f7fc1a10933ffca576fd5dee
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 86633b5dc5a847c33a0131a795601fbf98967dfd
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49263111"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570541"
