--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.contentcontroldata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.contentcontroldata.yml
@@ -177,6 +177,9 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -330,9 +333,9 @@ properties:
     return:
       type: <xref uid="word!Word.ContentControlType:enum" /> | "Unknown" | "RichTextInline" | "RichTextParagraphs" | "RichTextTableCell" | "RichTextTableRow" | "RichTextTable" | "PlainTextInline" | "PlainTextParagraph" | "Picture" | "BuildingBlockGallery" | "CheckBox" | "ComboBox" | "DropDownList" | "DatePicker" | "RepeatingSection" | "RichText" | "PlainText"
 metadata:
-  ms.openlocfilehash: 25f8910b5784464d04a890e53d8a16dbbf301f01
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 298082a16a5e43b9a7488fc12c6d2139106fd72f
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49149593"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570562"
