--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertyloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertyloadoptions.yml
@@ -62,7 +62,7 @@ properties:
   package: word!
   fullName: value
   summary: >-
-    获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
+    获取或设置自定义属性的值。 请注意，即使在 web 上的 Word 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
 
 
     \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -74,9 +74,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: ca3a4b94dd68a757e0d2543e0380c31792d0aef1
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: ad2ffccd414060eb558e8f78fdd69a31c5aaaced
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49149551"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570226"
