--- a/docs/docs-ref-autogen/word_1_3/word/word.paragraph.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.paragraph.yml
@@ -591,7 +591,7 @@ methods:
   package: word!
   fullName: getHtml()
   summary: >-
-    获取段落对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台上的同一文档返回完全相同的 HTML (Windows、Mac、web 上的 Word 等 ) 。 如果您需要完全保真度或跨平台的一致性，请使用 `Paragraph.getOoxml()` 并将返回的 XML 转换为 HTML。
+    获取段落对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台上的同一文档返回完全相同的 HTML (Windows、Mac、Word 网页版，等等 ) 。 如果您需要完全保真度或跨平台的一致性，请使用 `Paragraph.getOoxml()` 并将返回的 XML 转换为 HTML。
 
 
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -1477,9 +1477,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 4544fb8bfabf84280db1767361f8e95a10f3ccdd
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 51a6c787ab6d3fc20c28155e6b703bf3364799a1
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49136146"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570275"
