--- a/docs/docs-ref-autogen/word/word/word.interfaces.custompropertydata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.custompropertydata.yml
@@ -46,7 +46,7 @@ properties:
   package: word!
   fullName: value
   summary: >-
-    获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
+    获取或设置自定义属性的值。 请注意，即使在 web 上的 Word 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
 
 
     \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -58,9 +58,9 @@ properties:
     return:
       type: any
 metadata:
-  ms.openlocfilehash: 85b91c9f577aa7052d220cb48fca0de0348941c7
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 9e9faaffcc9c30aab5abab2723ef3c9401a6480b
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49209484"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570177"
