--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolcollectionloadoptions.yml
@@ -145,6 +145,9 @@ properties:
     对于集合中的每一项：获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -250,9 +253,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 0ab706b0daa153ce2c100d4045ef4d7bb9c79d1a
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 6d6d8b1ea0c837070b82fb391196e3f2e8a915bc
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49171237"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570261"
