--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolloadoptions.yml
@@ -145,6 +145,9 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
+    **注意**：此 API 在 web 上的 Word 中不受支持。
+
+
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
@@ -250,9 +253,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 6be539e8e7cc1025bc47fab46eff131590317dc4
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: d057df5791ea5ea1a38f631a049340149763f51b
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49262957"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570068"
