--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertycollectionloadoptions.yml
@@ -62,7 +62,7 @@ properties:
   package: word!
   fullName: value
   summary: >-
-    对于集合中的每一项：获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
+    对于集合中的每一项：获取或设置自定义属性的值。 请注意，即使在 web 上的 Word 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符 (可能通过细分代理项对) 来创建无效的 unicode。
 
 
     \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -74,9 +74,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 15682f5693c2b67cd50b1f7b844b1d9fcaa41f3d
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 91af558785a4bc22461d25b1091c71870ba1837d
+  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49149614"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "49570520"
