commit translated contents

--- a/docs/docs-ref-autogen/outlook/outlook/office.notificationmessageaction.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.notificationmessageaction.yml
@@ -4,7 +4,10 @@ uid: outlook!Office.NotificationMessageAction:interface
 package: outlook!
 fullName: Office.NotificationMessageAction
 summary: >-
-  通知邮件的操作定义。
+  通知邮件的操作的定义。
+
+
+  **重要** 提示：在新式 Outlook 网页中， `NotificationMessageAction` 该对象仅在撰写模式下可用。
 
 
   \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -12,7 +15,7 @@ remarks: >-
   **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
 
-  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
 isPreview: true
 isDeprecated: false
 type: interface
@@ -45,7 +48,7 @@ properties:
   uid: outlook!Office.NotificationMessageAction#commandId:member
   package: outlook!
   fullName: commandId
-  summary: 基于项目类型在清单中定义的按钮。
+  summary: 清单中根据项目类型定义的按钮。
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -57,7 +60,7 @@ properties:
   uid: outlook!Office.NotificationMessageAction#contextData:member
   package: outlook!
   fullName: contextData
-  summary: 按钮需要传递的任何 JSON 数据。
+  summary: 按钮需要传递的任何 JSON 数据。 可以通过调用来检索此数据 `item.getInitializationContextAsync`<!-- -->.
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -66,9 +69,9 @@ properties:
     return:
       type: any
 metadata:
-  ms.openlocfilehash: 636656eedc2a1d7c3c3d7848838562805dcb0a4f
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 8ec7a20c6784648fe4a9689c8063ef6961550570
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49300827"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623333"
