--- a/docs/docs-ref-autogen/outlook/outlook/office.userprofile.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.userprofile.yml
@@ -3,7 +3,7 @@ name: Office.UserProfile
 uid: outlook!Office.UserProfile:interface
 package: outlook!
 fullName: Office.UserProfile
-summary: 有关与邮箱关联的用户的信息。 这包括帐户类型、显示名称、电子邮件地址和时区。
+summary: 有关与邮箱关联的用户的信息。 这包括他们的帐户类型、显示名称、电子邮件地址和时区。
 remarks: >-
   **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -21,10 +21,10 @@ properties:
     获取与邮箱关联的用户的帐户类型。
 
 
-    **注意**：当前仅在 Mac 上的 Outlook 2016 或更高版本中支持此成员，生成16.9.1212 及更高版本。
+    **注意**：此成员当前仅在 Mac 版 Outlook 2016 或更高版本（内部版本 16.9.1212 及更高版本）中受支持。
 
 
-    \[[API 集：邮箱 1.6](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：Mailbox 1.6](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -35,7 +35,7 @@ properties:
     下表列出了可能的帐户类型。
 
 
-    <table> <tr> <th>值</th> <th>产品介绍?</th> </tr> <tr> <td>企业</td> <td>邮箱位于本地 Exchange 服务器上。</td> </tr> <tr> <td>gmail</td> <td>邮箱与 Gmail 帐户相关联。</td> </tr> <tr> <td>office365</td> <td>邮箱与 Office 365 工作或学校帐户相关联。</td> </tr> <tr> <td>outlookCom</td> <td>邮箱与个人 Outlook.com 帐户相关联。</td> </tr> </table>
+    <table> <tr> <th>值</th> <th>说明？</th> </tr> <tr> <td>enterprise</td> <td>邮箱位于内部部署 Exchange 服务器上。</td> </tr> <tr> <td>gmail</td> <td>邮箱与 Gmail 帐户相关联。</td> </tr> <tr> <td>office365</td> <td>邮箱与 Microsoft 365 工作或学校帐户相关联。</td> </tr> <tr> <td>outlookCom</td> <td>邮箱与个人邮箱帐户Outlook.com关联。</td> </tr> </table>
 
 
     #### <a name="examples"></a>示例
@@ -113,10 +113,10 @@ properties:
   package: outlook!
   fullName: timeZone
   summary: >-
-    获取用户的 Windows 格式的时区。
+    获取 Windows 格式的用户时区。
 
 
-    通常会返回系统时区。 但是，在 web 上的 Outlook 中，将改为返回日历首选项中的默认时区。
+    通常返回系统时区。 但是，在 Outlook 网页中，将改为返回日历首选项中的默认时区。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -141,9 +141,9 @@ properties:
     return:
       type: string
 metadata:
-  ms.openlocfilehash: 68788aa7f1cab6f0b7f5c749617fccd1ccbb4562
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 27590183af4e0d3f44e9b80b23e07b057e1e8940
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49250448"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623251"
