--- a/docs/docs-ref-autogen/outlook/outlook/office.notificationmessages.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.notificationmessages.yml
@@ -7,7 +7,7 @@ summary: >-
   `NotificationMessages` 对象作为项目的 `notificationMessages` 属性返回。
 
 
-  \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
 remarks: >-
   **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -28,10 +28,16 @@ methods:
     每封邮件中最多有 5 个通知。设置过多的通知将返回 `NumberOfNotificationMessagesExceeded` 错误。
 
 
-    **重要说明**： `InsightMessage` 每个加载项只允许一个类型的通知。  (该 `InsightMessage` 类型当前处于预览阶段。尝试添加的 ) 会引发错误。
+    **重要提示**：
 
 
-    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    - 每个外接程序只允许 `InsightMessage` 有一个类型通知。  (`InsightMessage` 类型当前处于预览状态。) 尝试添加更多内容将引发错误。
+
+
+    - 在新式 Outlook 网页中，只能在撰写 `InsightMessage` 模式下添加通知。
+
+
+    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -114,13 +120,13 @@ methods:
       description: 用于引用此通知邮件的开发人员指定的项。开发人员可以在以后用它来修改此邮件。其长度不能超过 32 个字符。
       type: string
     - id: JSONmessage
-      description: 一个包含要添加到项目的通知邮件的 JSON 对象。 它包含一个 `NotificationMessageDetails` 对象。
+      description: 一个包含要添加到项目的通知邮件的 JSON 对象。 它包含一 `NotificationMessageDetails` 个对象。
       type: <xref uid="outlook!Office.NotificationMessageDetails:interface" />
     - id: options
-      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
       type: <xref uid="office!Office.AsyncContextOptions:interface" />
     - id: callback
-      description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
+      description: 可选。 方法完成后，用一个类型参数调用在参数中 `callback` 传递的函数 `Office.AsyncResult`<!-- -->.
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;void&gt;) =&gt; void'
     return:
       type: void
@@ -133,7 +139,7 @@ methods:
     返回某个项目的所有项和邮件。
 
 
-    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: "**[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`\n\n**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// Get all notifications.\nOffice.context.mailbox.item.notificationMessages.getAllAsync(function (asyncResult) {\n    if (asyncResult.status != \"failed\") {\n        Office.context.mailbox.item.notificationMessages.replaceAsync( \"notifications\", {\n            type: \"informationalMessage\",\n            message : \"Found \" + asyncResult.value.length + \" notifications.\",\n            icon : \"iconid\",\n            persistent: false\n        });\n    }\n});\n```\n```javascript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/35-notifications/add-getall-remove.yaml\nOffice.context.mailbox.item.notificationMessages.getAllAsync(handleResult);          \n```"
   isPreview: false
   isDeprecated: false
@@ -141,10 +147,10 @@ methods:
     content: 'getAllAsync(options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<NotificationMessageDetails[]>) => void): void;'
     parameters:
     - id: options
-      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
       type: <xref uid="office!Office.AsyncContextOptions:interface" />
     - id: callback
-      description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->. `value`结果的属性是对象的数组 `NotificationMessageDetails` 。
+      description: 可选。 方法完成后，用一个类型参数调用在参数中 `callback` 传递的函数 `Office.AsyncResult`<!-- -->. `value`结果的属性是对象 `NotificationMessageDetails` 数组。
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;<xref uid="outlook!Office.NotificationMessageDetails:interface" />[]&gt;) =&gt; void'
     return:
       type: void
@@ -157,7 +163,7 @@ methods:
     删除某个项目的通知邮件。
 
 
-    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -186,10 +192,10 @@ methods:
       description: 要删除的通知邮件的项。
       type: string
     - id: options
-      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
       type: <xref uid="office!Office.AsyncContextOptions:interface" />
     - id: callback
-      description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
+      description: 可选。 方法完成后，用一个类型参数调用在参数中 `callback` 传递的函数 `Office.AsyncResult`<!-- -->.
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;void&gt;) =&gt; void'
     return:
       type: void
@@ -205,7 +211,7 @@ methods:
     如果带有指定项的通知邮件不存在，`replaceAsync` 将添加通知。
 
 
-    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -254,21 +260,21 @@ methods:
       description: 要替换的通知邮件的项。 长度不能超过 32 个字符。
       type: string
     - id: JSONmessage
-      description: 一个包含要替换现有邮件的新通知邮件的 JSON 对象。 它包含一个 `NotificationMessageDetails` 对象。
+      description: 一个包含要替换现有邮件的新通知邮件的 JSON 对象。 它包含一 `NotificationMessageDetails` 个对象。
       type: <xref uid="outlook!Office.NotificationMessageDetails:interface" />
     - id: options
-      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+      description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
       type: <xref uid="office!Office.AsyncContextOptions:interface" />
     - id: callback
-      description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
+      description: 可选。 方法完成后，用一个类型参数调用在参数中 `callback` 传递的函数 `Office.AsyncResult`<!-- -->.
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;void&gt;) =&gt; void'
     return:
       type: void
       description: ''
 metadata:
-  ms.openlocfilehash: 382d8862a51317b052f6dfd272d0c675244919d1
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: f281cfc1a7f593980b294fcb2eddb5d798a5f3ee
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49319076"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623515"
