--- a/docs/docs-ref-autogen/word/word/word.interfaces.contentcontrolcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.contentcontrolcollectionloadoptions.yml
@@ -4,10 +4,10 @@ uid: word!Word.Interfaces.ContentControlCollectionLoadOptions:interface
 package: word!
 fullName: Word.Interfaces.ContentControlCollectionLoadOptions
 summary: >-
-  包含 [ContentControl](xref:word!Word.ContentControl:class) 对象的集合。 内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。 单个内容控件可能包含诸如图片、表或格式化文本段落等内容。 当前仅支持富文本内容控件。
+  包含 [Word.ContentControl 对象](xref:word!Word.ContentControl:class) 的集合。 内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。 单个内容控件可能包含诸如图片、表或格式化文本段落等内容。 当前仅支持富文本内容控件。
 
 
-  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: word!Word.Interfaces.ContentControlCollectionLoadOptions#$all:member
   package: word!
   fullName: $all
-  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  summary: 为 `$all` LoadOptions 指定将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: word!
   fullName: appearance
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
+    对于集合中的每个项目：获取或设置内容控件的外观。 该值可以是"BoundingBox"、"Tags"或"Hidden"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -46,10 +46,10 @@ properties:
   package: word!
   fullName: cannotDelete
   summary: >-
-    对于集合中的每一项：获取或设置一个值，该值指示用户是否可以删除内容控件。 与 removeWhenEdited 互相排斥。
+    对于集合中的每个项目：获取或设置一个值，该值指示用户是否可以删除内容控件。 与 removeWhenEdited 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -62,10 +62,10 @@ properties:
   package: word!
   fullName: cannotEdit
   summary: >-
-    对于集合中的每一项：获取或设置一个值，该值指示用户是否可以编辑内容控件的内容。
+    对于集合中的每个项目：获取或设置一个值，该值指示用户是否可以编辑内容控件的内容。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -78,10 +78,10 @@ properties:
   package: word!
   fullName: color
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
+    对于集合中的每个项目：获取或设置内容控件的颜色。 颜色以' \# RRGGBB' 格式指定，或者使用颜色名称指定。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -94,10 +94,10 @@ properties:
   package: word!
   fullName: font
   summary: >-
-    对于集合中的每一项：获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
+    对于集合中的每个项目：获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -110,10 +110,10 @@ properties:
   package: word!
   fullName: id
   summary: >-
-    对于集合中的每一项：获取一个整数，表示内容控件标识符。 只读。
+    对于集合中的每个项目：获取一个代表内容控件标识符的整数。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -126,10 +126,10 @@ properties:
   package: word!
   fullName: parentBody
   summary: >-
-    对于集合中的每一项：获取内容控件的父正文。
+    对于集合中的每个项目：获取内容控件的父正文。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -142,10 +142,10 @@ properties:
   package: word!
   fullName: parentContentControl
   summary: >-
-    对于集合中的每一项：获取包含内容控件的内容控件。 如果没有父内容控件，则会引发错误。
+    对于集合中的每个项目：获取包含内容控件的内容控件。 如果没有父内容控件，则引发错误。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -158,10 +158,10 @@ properties:
   package: word!
   fullName: parentContentControlOrNullObject
   summary: >-
-    对于集合中的每一项：获取包含内容控件的内容控件。 如果没有父内容控件，则返回 null 对象。
+    对于集合中的每个项目：获取包含内容控件的内容控件。 如果没有父内容控件，则返回 null 对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -174,10 +174,10 @@ properties:
   package: word!
   fullName: parentTable
   summary: >-
-    对于集合中的每一项：获取包含内容控件的表。 如果表中不包含该错误，则会引发错误。
+    对于集合中的每个项目：获取包含内容控件的表。 如果未包含在表中，则引发错误。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -190,10 +190,10 @@ properties:
   package: word!
   fullName: parentTableCell
   summary: >-
-    对于集合中的每一项：获取包含内容控件的表格单元格。 如果表单元格中不包含错误，则会引发错误。
+    对于集合中的每个项目：获取包含内容控件的 table 单元格。 如果未包含在表格单元格中，则引发错误。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -206,10 +206,10 @@ properties:
   package: word!
   fullName: parentTableCellOrNullObject
   summary: >-
-    对于集合中的每一项：获取包含内容控件的表格单元格。 如果未包含在 tableCell 中，则此关系返回空对象。
+    对于集合中的每个项目：获取包含内容控件的 table 单元格。 如果未包含在 tableCell 中，则此关系返回空对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -222,10 +222,10 @@ properties:
   package: word!
   fullName: parentTableOrNullObject
   summary: >-
-    对于集合中的每一项：获取包含内容控件的表。 如果未包含在 table 中，则此关系返回空对象。
+    对于集合中的每个项目：获取包含内容控件的表。 如果未包含在 table 中，则此关系返回空对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -238,13 +238,13 @@ properties:
   package: word!
   fullName: placeholderText
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
+    对于集合中的每个项目：获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
-    **注意**：此 API 在 web 上的 Word 中不受支持。
+    **注意**：Web 上的 Word 不支持此属性的设置操作。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -257,10 +257,10 @@ properties:
   package: word!
   fullName: removeWhenEdited
   summary: >-
-    对于集合中的每一项：获取或设置一个值，该值指示是否在编辑内容控件之后将其删除。 与 cannotDelete 互相排斥。
+    对于集合中的每个项目：获取或设置一个值，该值指示内容控件在编辑后是否被删除。 与 cannotDelete 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -273,10 +273,10 @@ properties:
   package: word!
   fullName: style
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
+    对于集合中的每个项目：获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -289,10 +289,10 @@ properties:
   package: word!
   fullName: styleBuiltIn
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的内置样式名称。 请对可以在区域设置之间移植的嵌入样式使用此属性。 若要使用自定义样式或本地化样式名称，请参阅“style”属性。
+    对于集合中的每个项目：获取或设置内容控件的内置样式名称。 请对可以在区域设置之间移植的嵌入样式使用此属性。 若要使用自定义样式或本地化样式名称，请参阅“style”属性。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -305,10 +305,10 @@ properties:
   package: word!
   fullName: subtype
   summary: >-
-    对于集合中的每一项：获取内容控件子类型。 对于 RTF 格式 contentControl，子类型的可取值为“RichTextInline”、“RichTextParagraphs”、“RichTextTableCell”、“RichTextTableRow”和“RichTextTable”。 只读。
+    对于集合中的每个项目：获取内容控件子类型。 对于 RTF 格式 contentControl，子类型的可取值为“RichTextInline”、“RichTextParagraphs”、“RichTextTableCell”、“RichTextTableRow”和“RichTextTable”。 只读。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -321,10 +321,10 @@ properties:
   package: word!
   fullName: tag
   summary: >-
-    对于集合中的每一项：获取或设置用于标识内容控件的标记。
+    对于集合中的每个项目：获取或设置一个标记来标识内容控件。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -337,10 +337,10 @@ properties:
   package: word!
   fullName: text
   summary: >-
-    对于集合中的每一项：获取内容控件的文本。 只读。
+    对于集合中的每个项目：获取内容控件的文本。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -353,10 +353,10 @@ properties:
   package: word!
   fullName: title
   summary: >-
-    对于集合中的每一项：获取或设置内容控件的标题。
+    对于集合中的每个项目：获取或设置内容控件的标题。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -369,10 +369,10 @@ properties:
   package: word!
   fullName: type
   summary: >-
-    对于集合中的每一项：获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
+    对于集合中的每个项目：获取内容控件类型。 当前仅支持富文本内容控件。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -381,9 +381,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: eb9dd8c9d79fed084478e3bf193e799279037ec3
-  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
+  ms.openlocfilehash: baffe4acbd897dcfca0707cd7b1238e2722b8735
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/04/2020
-  ms.locfileid: "49570478"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623361"
