--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.contentcontrolloadoptions.yml
@@ -7,7 +7,7 @@ summary: >-
   表示内容控件。内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。单个内容控件可能包含诸如图像、表或格式化文本段落等内容。当前仅支持富文本内容控件。
 
 
-  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: word!Word.Interfaces.ContentControlLoadOptions#$all:member
   package: word!
   fullName: $all
-  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  summary: 为 `$all` LoadOptions 指定将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: word!
   fullName: appearance
   summary: >-
-    获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
+    获取或设置内容控件的外观。 该值可以是"BoundingBox"、"Tags"或"Hidden"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     获取或设置指示用户是否可以删除内容控件的值。 与 removeWhenEdited 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -65,7 +65,7 @@ properties:
     获取或设置指示用户是否可以编辑内容控件的内容的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -78,10 +78,10 @@ properties:
   package: word!
   fullName: color
   summary: >-
-    获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
+    获取或设置内容控件的颜色。 颜色以' \# RRGGBB' 格式指定，或者使用颜色名称指定。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -97,7 +97,7 @@ properties:
     获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -113,7 +113,7 @@ properties:
     获取表示内容控件标识符的整数。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -126,10 +126,10 @@ properties:
   package: word!
   fullName: parentContentControl
   summary: >-
-    获取包含此内容控件的内容控件。 如果没有父内容控件，则会引发错误。
+    获取包含此内容控件的内容控件。 如果没有父内容控件，则引发错误。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -145,10 +145,10 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
-    **注意**：此 API 在 web 上的 Word 中不受支持。
+    **注意**：Web 上的 Word 不支持此属性的设置操作。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -164,7 +164,7 @@ properties:
     获取或设置指示内容控件在编辑后是否可以删除的值。 与 cannotDelete 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -180,7 +180,7 @@ properties:
     获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -196,7 +196,7 @@ properties:
     获取或设置用于标识内容控件的标记。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -212,7 +212,7 @@ properties:
     获取内容控件的文本。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -228,7 +228,7 @@ properties:
     获取或设置内容控件的标题。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -244,7 +244,7 @@ properties:
     获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -253,9 +253,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: d057df5791ea5ea1a38f631a049340149763f51b
-  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
+  ms.openlocfilehash: 4aa4219f21e108c694df09dc6798c0834e635bab
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/04/2020
-  ms.locfileid: "49570296"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623424"
