--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.contentcontrolloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.contentcontrolloadoptions.yml
@@ -7,7 +7,7 @@ summary: >-
   表示内容控件。内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。单个内容控件可能包含诸如图像、表或格式化文本段落等内容。当前仅支持富文本内容控件。
 
 
-  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: word!Word.Interfaces.ContentControlLoadOptions#$all:member
   package: word!
   fullName: $all
-  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  summary: 为 `$all` LoadOptions 指定将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: word!
   fullName: appearance
   summary: >-
-    获取或设置内容控件的外观。 该值可以是 "BoundingBox"、"Tags" 或 "Hidden"。
+    获取或设置内容控件的外观。 该值可以是"BoundingBox"、"Tags"或"Hidden"。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     获取或设置指示用户是否可以删除内容控件的值。 与 removeWhenEdited 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -65,7 +65,7 @@ properties:
     获取或设置指示用户是否可以编辑内容控件的内容的值。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -78,10 +78,10 @@ properties:
   package: word!
   fullName: color
   summary: >-
-    获取或设置内容控件的颜色。 颜色以 " \# RRGGBB" 格式或使用颜色名称指定。
+    获取或设置内容控件的颜色。 颜色以' \# RRGGBB' 格式指定，或者使用颜色名称指定。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -97,7 +97,7 @@ properties:
     获取内容控件的文本格式。 使用此对象获取和设置字体名称、大小、颜色和其他属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -113,7 +113,7 @@ properties:
     获取表示内容控件标识符的整数。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -129,7 +129,7 @@ properties:
     获取 contentControl 的父正文。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -142,10 +142,10 @@ properties:
   package: word!
   fullName: parentContentControl
   summary: >-
-    获取包含此内容控件的内容控件。 如果没有父内容控件，则会引发错误。
+    获取包含此内容控件的内容控件。 如果没有父内容控件，则引发错误。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -161,7 +161,7 @@ properties:
     获取包含此内容控件的内容控件。 如果没有父内容控件，则返回 null 对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -174,10 +174,10 @@ properties:
   package: word!
   fullName: parentTable
   summary: >-
-    获取包含 contentControl 的 table。 如果表中不包含该错误，则会引发错误。
+    获取包含 contentControl 的 table。 如果未包含在表中，则引发错误。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -190,10 +190,10 @@ properties:
   package: word!
   fullName: parentTableCell
   summary: >-
-    获取包含 contentControl 的 tableCell。 如果表单元格中不包含错误，则会引发错误。
+    获取包含 contentControl 的 tableCell。 如果未包含在表格单元格中，则引发错误。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -209,7 +209,7 @@ properties:
     获取包含 contentControl 的 tableCell。 如果未包含在 tableCell 中，则此关系返回空对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -225,7 +225,7 @@ properties:
     获取包含 contentControl 的 table。 如果未包含在 table 中，则此关系返回空对象。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -241,10 +241,10 @@ properties:
     获取或设置内容控件的占位符文本。 内容控件为空时，将显示灰色的文本。
 
 
-    **注意**：此 API 在 web 上的 Word 中不受支持。
+    **注意**：Web 上的 Word 不支持此属性的设置操作。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -260,7 +260,7 @@ properties:
     获取或设置指示内容控件在编辑后是否可以删除的值。 与 cannotDelete 互相排斥。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -276,7 +276,7 @@ properties:
     获取或设置内容控件的样式名称。 请对自定义样式和本地化样式名称使用此属性。 若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -292,7 +292,7 @@ properties:
     获取或设置 contentControl 的嵌入样式名称。请对可以在区域设置之间移植的嵌入样式使用此属性。若要使用自定义样式或本地化样式名称，请参阅“style”属性。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -308,7 +308,7 @@ properties:
     获取 contentControl 的子类型。 对于 RTF 格式 contentControl，子类型的可取值为“RichTextInline”、“RichTextParagraphs”、“RichTextTableCell”、“RichTextTableRow”和“RichTextTable”。 只读。
 
 
-    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -324,7 +324,7 @@ properties:
     获取或设置用于标识内容控件的标记。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -340,7 +340,7 @@ properties:
     获取内容控件的文本。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -356,7 +356,7 @@ properties:
     获取或设置内容控件的标题。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -372,7 +372,7 @@ properties:
     获取内容控件的类型。 当前仅支持富文本内容控件。 只读。
 
 
-    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    \[[API 集：WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -381,9 +381,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 1282ed715cd4d6e731009251aa9c43bfbecd3b5e
-  ms.sourcegitcommit: 551d760f6b9e7ff22afdaf6ce8e0b2863946596d
+  ms.openlocfilehash: e2afd9dee241c061f240d0bbe477f257fc461cce
+  ms.sourcegitcommit: 6702d1aafaf1d8114bcf5e5eeb5d7833c108d56a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/04/2020
-  ms.locfileid: "49570555"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "49623263"
